--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <span class="incorrect"></span>
         </div>
 
-        <script src="http://code.jquery.com/jquery-3.4.1.min.js"
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js"
             integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
         <script src="Assets/javascript/app.js"></script>
 
