--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"
             integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-        <script src="Assets/javascript/app.js"></script>
+        <script src="Assets/Javascript/app.js"></script>
 
 </body>
 
